--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@zeit/next-sass": "^1.0.1",
         "aws-amplify": "^3.3.1",
         "aws-appsync": "^4.0.1",
+        "browser-image-compression": "^1.0.12",
         "next": "9.3.2",
         "next-redux-wrapper": "^6.0.2",
         "node-sass": "^4.13.1",
