--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start"
+        "start": "next start",
+        "deploy": "serverless"
     },
     "dependencies": {
         "@apollo/client": "^3.2.0",
