--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "unitabiz-frontend",
+    "name": "unitabiz-nextjs",
     "version": "0.1.0",
     "private": true,
     "scripts": {
