--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "node-sass": "^4.13.1",
         "react": "16.13.1",
         "react-bootstrap": "^1.3.0",
+        "react-bootstrap-table": "^4.3.1",
+        "react-bootstrap-table-next": "^4.0.3",
+        "react-bootstrap-table2-paginator": "^2.1.2",
         "react-countup": "^4.3.3",
         "react-dom": "16.13.1",
         "react-feather": "^2.0.8",
