--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-modal-video": "^1.2.3",
         "react-redux": "^7.2.1",
         "react-redux-loading": "^4.6.1",
+        "react-select": "^3.1.0",
         "react-visibility-sensor": "^5.1.1",
         "reactstrap": "^8.6.0",
         "redux": "^4.0.5",
